@@ -7,6 +7,7 @@ Revision history for Dist-Build
           - Allow file to be specified instead of module in Dist::Build::XS
           - Allow sources to be a hash in Dist::Build::XS
           - Extract script and lib logic out of base module
+          - Add clean and autoclean actions
 
 0.007     2024-07-20 15:19:09+02:00 Europe/Brussels
           - Properly depend on new ExtUtils::Builder::Compiler
